# hop

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: hop-desktop.yml
apps/desktop/: package.json
apps/desktop/quicklook/rust/: Cargo.toml
apps/desktop/quicklook/rust/src/: lib.rs  pdf.rs  tests.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: app_quit.rs  commands.rs  font_catalog.rs  lib.rs  linux_runtime.rs  linux_runtime_tests.rs  macos_recent_documents.rs  pdf_export.rs  pdf_font_fallbacks.rs  recent_documents.rs
apps/desktop/src-tauri/tests/: linux_runtime.rs
apps/desktop/src-tauri/windows/: main.wxs
apps/studio-host/: hop-overrides.ts  index.html  package.json  tsconfig.json  vite.config.ts
apps/studio-host/src/: main.ts  vite-env.d.ts
apps/studio-host/src/command/: shortcut-map.test.ts  shortcut-map.ts
apps/studio-host/src/core/: chunked-fs.ts  (+11 more)
docs/: DEVELOPMENT.md  README.md
docs/architecture/: LOCAL_FONTS.md  UPSTREAM.md
docs/operations/: DESKTOP_RELEASE.md  issues-54-61-63-53-1pager.md  quicklook-extension-1pager.md  release-v0.2.0-1pager.md  release-v0.3.0-1pager.md  rhwp-v0.7.8-upgrade-1pager.md
docs/specs/: desktop-large-file-io.md  linux-appimage-egl-regression.md  linux-appimage-ime-regression.md  windows-fs-acl-regression.md
scripts/: build-quicklook-macos.mjs  test-quicklook-macos.mjs
site/: index.html  styles.css
tests/: rhwp-baseline.test.mjs
(+24 files in other folders)
