[package]
name = "hop-quicklook-ffi"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "hop_quicklook_ffi"
crate-type = ["staticlib", "rlib"]

[dependencies]
pdf-writer = "0.12"
rhwp = { path = "../../../../third_party/rhwp" }
serde_json = "1"
svg2pdf = "0.13"
usvg = "0.45"

[features]
default = []
native-skia = ["rhwp/native-skia"]
